logs/django-swaps.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_swaps-0.5.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/swaps'...
Compiling './lib/python3.5/site-packages/swaps/management.py'...
***   File "./lib/python3.5/site-packages/swaps/management.py", line 20
    print "Skipping creation of NoticeTypes as notification app not found"
                                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/swaps/templates'...
Listing './lib/python3.5/site-packages/swaps/templates/notification'...
Listing './lib/python3.5/site-packages/swaps/templates/notification/swaps_acceptance'...
Listing './lib/python3.5/site-packages/swaps/templates/notification/swaps_cancellation'...
Listing './lib/python3.5/site-packages/swaps/templates/notification/swaps_comment'...
Listing './lib/python3.5/site-packages/swaps/templates/notification/swaps_conflict'...
Listing './lib/python3.5/site-packages/swaps/templates/notification/swaps_proposal'...
Listing './lib/python3.5/site-packages/swaps/templates/notification/swaps_proposing_offer_changed'...
Listing './lib/python3.5/site-packages/swaps/templates/notification/swaps_rejection'...
Listing './lib/python3.5/site-packages/swaps/templates/notification/swaps_responding_offer_changed'...
Listing './lib/python3.5/site-packages/swaps/templates/swaps'...
Listing './share'...
Listing './share/python-wheels'...
